--- a/app/views/fileupload/main.scala.html
+++ b/app/views/fileupload/main.scala.html
@@ -71,6 +71,7 @@
             });
 
             var localHref = window.location.href;
+            var test ="";
             window.parent.postMessage(localHref,'http://localhost:9000/project/diversity');
 
 
