--- a/app/views/background/left.scala.html
+++ b/app/views/background/left.scala.html
@@ -19,7 +19,7 @@
 
 
             <li class="left-height" id="home">
-                <a href='@routes.SampleController.home' class="left-a-open">
+                <a href='@routes.ProjectController.home' class="left-a-open">
 
                     <i class='fa fa-database'></i>
                     <span class="title">项目总览</span>
@@ -42,7 +42,7 @@
 
                 <li class="left-height left-project" id="uploadData">
                     <a href='@routes.SampleController.uploadData(proname)' class="left-a-open">
-                        <i class='fa fa-upload'></i>
+                        <i class='fa fa-cloud-upload'></i>
                         <span class="title">数据导入</span>
                         <span class='selected'></span>
 
