--- a/app/views/background/main.scala.html
+++ b/app/views/background/main.scala.html
@@ -20,6 +20,7 @@
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bootstrap-fileinput-master/css/fileinput.min.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bootstrap-table-master/dist/bootstrap-table.min.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/my.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("config/css/my-model.css")">
 		<script src="@routes.Assets.versioned("bootstrap/js/jquery-3.1.1.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.versioned("javascripts/jquery-migrate-1.2.1.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
@@ -42,15 +43,17 @@
 		<script src="@routes.Assets.versioned("bootstrap-fileinput-master/js/fileinput.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.versioned("bootstrap-table-master/dist/extensions/multiple-search/bootstrap-table-multiple-search.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.versioned("config/js/jquery.cookie.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.versioned("config/js/jump.js")" type="text/javascript"></script>
 
 	</head>
 	<body class="page-header-fixed page-quick-sidebar-over-content">
-
-
 		<div class="page-container">
 			@background.left(proname)
 			<div class="page-content-wrapper">
-			@content
+				<div class="page-content">
+				@content
+				</div>
 			</div>
 		</div>
 
@@ -63,10 +66,7 @@
 				Layout.init(); // init current layout
 				QuickSidebar.init(); // init quick sidebar
 				Demo.init(); // init demo features
+				jumpConfig("diversity");
 			});
-
-			var localHref = window.location.href;
-			window.parent.postMessage(localHref,'http://localhost:9000/project/diversity');
-
 	</script>
 </html>
